# Lambix

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
Core/: CMakeLists.txt  lbpch.h
Core/include/: lbcore.h
Core/include/Debug/: lbLog.h
Core/include/Window/: lbWindow.h
Core/src/Application/: lbApplication.cpp
Core/src/Debug/: lbLog.cpp
Core/src/Window/: lbWindow.cpp
Editor/: CMakeLists.txt
Editor/include/: EditorLayer.h  lbEditorLayer.h
Editor/src/: EditorLayer.cpp  LambixEditorApp.cpp  lbEditorApp.cpp  lbEditorLayer.cpp  lbEditorLayer.h
Editor/src/Panels/: lbAssetsBrowserPanel.cpp  lbAssetsBrowserPanel.h  lbLogPanel.cpp  lbLogPanel.h  lbMenuBarPanel.cpp  lbMenuBarPanel.h  lbPanel.cpp  lbPanel.h  lbProfilePanel.cpp  lbProfilePanel.h  lbPropertyPanel.cpp  lbPropertyPanel.h  lbSceneHierarchyPanel.cpp  lbSceneHierarchyPanel.h  lbViewportPanel.cpp  lbViewportPanel.h
Engine/: CMakeLists.txt  lbpch.h
Engine/include/: lbEngine.h  lbEnterPoint.h
Engine/include/Backend/OpenGL/: lbOpenGLBackend.h  lbOpenGLBuffer.h  lbOpenGLContext.h  lbOpenGLFrameBuffer.h  lbOpenGLShader.h  lbOpenGLTexture.h  lbOpenGLUniformBuffer.h  lbOpenGLVertexArray.h
Engine/include/Core/: lbApplication.h  lbInput.h  lbLayer.h  lbLayerStack.h  lbLog.h  lbWindow.h
Engine/include/Core/Base/: lbApplication.h  lbCore.h  lbLayer.h  lbLog.h  lbWindow.h
Engine/include/Core/ECS/: lbEntity.h  lbScene.h
Engine/include/Core/ECS/Components/: lbBasicComponents.h  lbMeshRendererComponent.h  lbTransformComponent.h
Engine/include/Core/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/include/Core/Imgui/: lbImguiLayer.h
Engine/include/Core/Renderer/: lbBuffer.h  lbFrameBuffer.h  lbGeometry.h  lbGraphicsContext.h  lbRenderer3D.h  lbRendererBackend.h  lbRendererCommand.h  lbShader.h  lbTexture.h  lbVertexArray.h
Engine/include/Core/Resource/: lbResourceManager.h
Engine/include/Core/Utils/: lbFileUtils.h
Engine/include/Platform/Window/: lbGLFWInput.h  lbGLFWWindow.h
Engine/include/Platform/Windows/: WindowsInput.h  WindowsWindow.h
Engine/src/: lbEngine.h  lbEnterPoint.h  lbpch.h
Engine/src/Assets/: lbAsset.h  lbAssetImport.cpp  lbAssetImport.h  lbAssetManager.cpp  lbAssetManager.h  lbTextureAsset.cpp  lbTextureAsset.h  lbTextureSourceAsset.cpp  lbTextureSourceAsset.h
Engine/src/Backend/OpenGL/: lbOpenGLBackend.cpp  lbOpenGLBackend.h  lbOpenGLBuffer.cpp  lbOpenGLBuffer.h  lbOpenGLContext.cpp  lbOpenGLContext.h  lbOpenGLFrameBuffer.cpp  lbOpenGLFrameBuffer.h  lbOpenGLShader.cpp  lbOpenGLShader.h  lbOpenGLTexture.cpp  lbOpenGLTexture.h  lbOpenGLUniformBuffer.cpp  lbOpenGLUniformBuffer.h  lbOpenGLVertexArray.cpp  lbOpenGLVertexArray.h
Engine/src/Core/: lbApplication.cpp  lbApplication.h  lbCore.h  lbInput.cpp  lbInput.h  lbLayer.h  lbLayerStack.cpp  lbLog.cpp  lbProject.cpp  lbProject.h  lbTransform.cpp  lbTransform.h  lbWindow.cpp  lbWindow.h
Engine/src/Core/Base/: lbApplication.cpp  lbInput.cpp  lbLayerStack.cpp  lbLog.cpp  lbResourceManager.cpp  lbWindow.cpp
Engine/src/Core/ECS/: lbEntity.cpp  lbScene.cpp
Engine/src/Core/Imgui/: lbImguiLayer.cpp
Engine/src/Core/Math/: lbBox.cpp  lbSphere.cpp
Engine/src/Core/Renderer/: lbBuffer.cpp  lbFrameBuffer.cpp  lbGeometry.cpp  lbRenderer3D.cpp  lbRendererCommand.cpp  lbShader.cpp  lbTexture.cpp  lbUniformBuffer.cpp  lbVertexArray.cpp
Engine/src/Core/UI/: lbLogUI.cpp
Engine/src/Core/Utils/: lbFileUtils.cpp
Engine/src/ECS/: lbEntity.cpp  lbEntity.h  lbScene.cpp  lbScene.h
Engine/src/ECS/Components/: lbBasicComponents.h  lbCameraComponent.cpp  lbCameraComponent.h  lbComponent.h  lbLightComponent.cpp  lbLightComponent.h  lbMeshRendererComponent.cpp  lbMeshRendererComponent.h  lbTransformComponent.cpp  lbTransformComponent.h
Engine/src/ECS/System/: lbCameraSystem.cpp  lbCameraSystem.h  lbLightSystem.cpp  lbLightSystem.h  lbRendererSystem.cpp  lbRendererSystem.h  lbSystem.h  lbSystemManager.cpp  lbSystemManager.h  lbTransformSystem.cpp  lbTransformSystem.h
Engine/src/Events/: ApplicationEvent.h  Event.h  MouseEvent.h  lbEvent.cpp  lbEvent.h  lbEventPool.h
Engine/src/Imgui/: lbImGuiLog.cpp  lbImGuiLog.h  lbImguiLayer.cpp  lbImguiLayer.h  lbLogUI.cpp  lbLogUI.h
Engine/src/Log/: lbLog.cpp  lbLog.h
Engine/src/Math/: lbBox.cpp  lbBox.h  lbSphere.cpp  lbSphere.h
Engine/src/Platform/Window/: lbGLFWInput.cpp  lbGLFWInput.h  lbGLFWWindow.cpp  lbGLFWWindow.h
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsWindow.cpp  lbWindowsFileDiologs.cpp
Engine/src/Renderer/: lbAttribute.h  lbBuffer.cpp  lbBuffer.h  lbFrameBuffer.cpp  lbGeometry.cpp  lbGeometry.h  lbMesh.cpp  lbMesh.h  lbModel.cpp  lbModel.h  lbRendererBackend.h  lbRendererCommand.cpp  lbRendererCommand.h  lbShader.h  lbTexture.cpp  lbTexture.h  lbUniformBuffer.cpp  lbUniformBuffer.h  lbVertexArray.cpp
Engine/src/Renderer/Driver/: lbDriverAttribute.cpp  lbDriverAttribute.h  lbDriverBackground.cpp  lbDriverBackground.h  lbDriverBindingState.cpp  lbDriverBindingState.h  lbDriverGeometry.cpp  lbDriverGeometry.h  lbDriverInfo.cpp  lbDriverInfo.h
Engine/src/Renderer/Geometry/: lbCubeGeometry.cpp  lbCubeGeometry.h  lbGeometry.cpp  lbGeometry.h
Engine/src/Renderer/Interfaces/: lbBuffer.cpp  lbBuffer.h  lbFrameBuffer.cpp  lbFrameBuffer.h  lbRendererBackend.h  lbShader.cpp  lbShader.h  lbTexture.cpp  lbTexture.h  lbVertexArray.cpp  lbVertexArray.h
Engine/src/Renderer/Light/: lbLight.h  lbLightingDefines.h
Engine/src/Renderer/Material/: lbBasicMaterial.cpp  lbBasicMaterial.h  lbCubeMaterial.cpp  lbCubeMaterial.h  lbMaterial.cpp  lbMaterial.h  lbPhongMaterial.cpp  lbPhongMaterial.h
Engine/src/Resource/: lbCache.cpp  lbCache.h  lbModelLoader.cpp  lbModelLoader.h  lbResourceManager.cpp  lbResourceManager.h  lbTextureLoader.cpp  lbTextureLoader.h
Engine/src/Utils/: lbFileDiologs.h  lbFileUtils.cpp  lbFileUtils.h  lbSingleton.h  lbSource.h  lbTimer.cpp  lbTimer.h  lbTimestep.h  lbUUID.h
Project/: demo.lproj
Sandbox/demo1/: CMakeLists.txt
Sandbox/demo1/src/: ExampleLayer.cpp  ExampleLayer.h  SandboxApp.cpp
(+38 files in other folders)
